# msc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: config.rs  error.rs  lib.rs  main.rs  screen.rs  state.rs  tmux.rs  update.rs  watchdog.rs
src/backup/: archive.rs  gdrive.rs  mod.rs  oauth.rs  restore.rs  scheduler.rs
src/cli/: mod.rs
src/server/: config.rs  control.rs  metrics.rs  mod.rs
src/tui/: main_screen.rs  mod.rs  server_screen.rs  widgets.rs
tests/: test_backup_archive.rs  test_server_discovery.rs  test_state_json.rs
tests/fixtures/: corrupt_state.json
tests/fixtures/fake_server/: anvil.toml  start.sh
